--- a/VidCoder/View/Panels/PicturePanel.xaml
+++ b/VidCoder/View/Panels/PicturePanel.xaml
@@ -108,7 +108,7 @@
 					<ComboBox
 						Grid.Row="0" Grid.Column="1" Height="22" VerticalAlignment="Top" Margin="0,1,0,0" HorizontalAlignment="Left" MinWidth="65"
 						ItemsSource="{Binding DisplayNames, Source={StaticResource AnamorphicChoices}}"
-						SelectedValue="{Binding SelectedAnamorphic, Converter={StaticResource AnamorphicChoices}}" />
+						SelectedValue="{Binding Anamorphic, Converter={StaticResource AnamorphicChoices}}" />
 
 					<Label
 						Grid.Row="1" Grid.Column="0" Height="24" HorizontalAlignment="Left" VerticalAlignment="Center" 
@@ -155,7 +155,7 @@
 					<RadioButton
 						Grid.Row="1" Grid.Column="0"
 						HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,5,0"
-						Visibility="{Binding PixelAspectVisibile, Converter={StaticResource VisibilityConverter}}"
+						Visibility="{Binding PixelAspectVisible, Converter={StaticResource VisibilityConverter}}"
 						IsChecked="{Binding UseDisplayWidth, Converter={StaticResource InverseBoolConverter}}" GroupName="useDisplayWidth2"
 						ToolTip="{x:Static res:EncodingRes.PixelAspectRatioToolTip}"
 						Content="{x:Static res:EncodingRes.PixelAspectRatioLabel}"/>
@@ -163,19 +163,19 @@
 						Grid.Row="1" Grid.Column="1"
 						Height="23" HorizontalAlignment="Left" VerticalAlignment="Top" Width="45"
 						Number="{Binding PixelAspectX, Mode=TwoWay}" AllowEmpty="False" Minimum="1"
-						Visibility="{Binding PixelAspectVisibile, Converter={StaticResource VisibilityConverter}}"
+						Visibility="{Binding PixelAspectVisible, Converter={StaticResource VisibilityConverter}}"
 						IsEnabled="{Binding UseDisplayWidth, Converter={StaticResource InverseBoolConverter}}"
 						ToolTip="{x:Static res:EncodingRes.PixelAspectRatioToolTip}"/>
 					<TextBlock
 						Grid.Row="1" Grid.Column="1"
 						Text="/"
 						HorizontalAlignment="Left" VerticalAlignment="Center" Margin="50,0,0,0"
-						Visibility="{Binding PixelAspectVisibile, Converter={StaticResource VisibilityConverter}}" />
+						Visibility="{Binding PixelAspectVisible, Converter={StaticResource VisibilityConverter}}" />
 					<controls:NumberBox
 						Grid.Row="1" Grid.Column="1"
 						Height="23" HorizontalAlignment="Left" VerticalAlignment="Top" Width="45" Margin="60,0,0,0"
 						Number="{Binding PixelAspectY, Mode=TwoWay}" AllowEmpty="False" Minimum="1"
-						Visibility="{Binding PixelAspectVisibile, Converter={StaticResource VisibilityConverter}}"
+						Visibility="{Binding PixelAspectVisible, Converter={StaticResource VisibilityConverter}}"
 						IsEnabled="{Binding UseDisplayWidth, Converter={StaticResource InverseBoolConverter}}"
 						ToolTip="{x:Static res:EncodingRes.PixelAspectRatioToolTip}"/>
 				</Grid>
