--- a/VidCoder/Controls/InlineWarning.xaml
+++ b/VidCoder/Controls/InlineWarning.xaml
@@ -1,20 +1,31 @@
-﻿<UserControl x:Class="VidCoder.Controls.InlineWarning"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-	<Grid>
-		<Border Background="#F7F7CD" CornerRadius="4" Padding="3" BorderBrush="LightGray" BorderThickness="1">
-			<Grid>
-				<Grid.ColumnDefinitions>
-					<ColumnDefinition Width="Auto" />
-					<ColumnDefinition Width="*" />
-				</Grid.ColumnDefinitions>
-				<Image
-					Grid.Column="0"
-					Source="/Icons/warning.png" Height="18" />
-				<TextBlock
-					Grid.Column="1"
-					Name="warningText" FontSize="14" VerticalAlignment="Center" Margin="4,0,4,0" TextWrapping="Wrap" />
-			</Grid>
-		</Border>
-	</Grid>
+﻿<UserControl
+    x:Class="VidCoder.Controls.InlineWarning"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <Grid>
+        <Border
+            Background="#F7F7CD"
+            BorderBrush="LightGray"
+            BorderThickness="1"
+            CornerRadius="4"
+            Padding="3">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <Image
+                    Grid.Column="0"
+                    Height="18"
+                    Source="/Icons/warning.png" />
+                <TextBlock
+                    Name="warningText"
+                    Grid.Column="1"
+                    Margin="4 0 4 0"
+                    VerticalAlignment="Center"
+                    FontSize="14"
+                    TextWrapping="Wrap" />
+            </Grid>
+        </Border>
+    </Grid>
 </UserControl>
