--- a/VidCoder/Controls/PathTextBlock.xaml
+++ b/VidCoder/Controls/PathTextBlock.xaml
@@ -1,9 +1,11 @@
-﻿<UserControl x:Class="VidCoder.Controls.PathTextBlock"
-			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-			 mc:Ignorable="d" 
-			 d:DesignHeight="30" d:DesignWidth="300">
-	<TextBlock Name="textBlock" ToolTipService.InitialShowDelay="0" />
+﻿<UserControl
+    x:Class="VidCoder.Controls.PathTextBlock"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="30"
+    d:DesignWidth="300"
+    mc:Ignorable="d">
+    <TextBlock Name="textBlock" ToolTipService.InitialShowDelay="0" />
 </UserControl>
