--- a/VidCoder/Controls/SplitButton.xaml
+++ b/VidCoder/Controls/SplitButton.xaml
@@ -1,51 +1,51 @@
 ﻿<UserControl
-	x:Class="VidCoder.Controls.SplitButton"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	Loaded="SplitButton_OnLoaded"
-	mc:Ignorable="d">
-	<UserControl.Template>
-		<ControlTemplate TargetType="{x:Type UserControl}">
-			<Button
-				Name="mainButton"
-				Width="{TemplateBinding Width}"
-				Height="{TemplateBinding Height}"
-				Padding="0"
-				HorizontalAlignment="Left"
-				VerticalAlignment="Top"
-				VerticalContentAlignment="Stretch"
-				ContextMenuService.Placement="Bottom">
-				<Button.Content>
-					<StackPanel Orientation="Horizontal" UseLayoutRounding="True">
-						<ContentPresenter Margin="{TemplateBinding Padding}" VerticalAlignment="Center" />
-						<Rectangle
-							Width="1"
-							Margin="0 4"
-							Fill="#111111" />
-						<Button Click="OnArrowClick">
-							<Button.Template>
-								<ControlTemplate TargetType="Button">
-									<Grid Name="buttonGrid" Background="Transparent">
-										<ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
-									</Grid>
-								</ControlTemplate>
-							</Button.Template>
-							<Button.Content>
-								<Path
-									Margin="4 0 3 0"
-									VerticalAlignment="Center"
-									Data="M 0,0 L 8,0 L 4,4 Z"
-									Fill="{TemplateBinding Foreground}" />
-							</Button.Content>
-						</Button>
-					</StackPanel>
-				</Button.Content>
-				<Button.ContextMenu>
-					<ContextMenu Name="buttonMenu" ItemsSource="{Binding Path=MenuItemsSource, RelativeSource={RelativeSource TemplatedParent}}" />
-				</Button.ContextMenu>
-			</Button>
-		</ControlTemplate>
-	</UserControl.Template>
+    x:Class="VidCoder.Controls.SplitButton"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Loaded="SplitButton_OnLoaded"
+    mc:Ignorable="d">
+    <UserControl.Template>
+        <ControlTemplate TargetType="{x:Type UserControl}">
+            <Button
+                Name="mainButton"
+                Width="{TemplateBinding Width}"
+                Height="{TemplateBinding Height}"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                VerticalContentAlignment="Stretch"
+                ContextMenuService.Placement="Bottom"
+                Padding="0">
+                <Button.Content>
+                    <StackPanel Orientation="Horizontal" UseLayoutRounding="True">
+                        <ContentPresenter Margin="{TemplateBinding Padding}" VerticalAlignment="Center" />
+                        <Rectangle
+                            Width="1"
+                            Margin="0 4"
+                            Fill="#111111" />
+                        <Button Click="OnArrowClick">
+                            <Button.Template>
+                                <ControlTemplate TargetType="Button">
+                                    <Grid Name="buttonGrid" Background="Transparent">
+                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                    </Grid>
+                                </ControlTemplate>
+                            </Button.Template>
+                            <Button.Content>
+                                <Path
+                                    Margin="4 0 3 0"
+                                    VerticalAlignment="Center"
+                                    Data="M 0,0 L 8,0 L 4,4 Z"
+                                    Fill="{TemplateBinding Foreground}" />
+                            </Button.Content>
+                        </Button>
+                    </StackPanel>
+                </Button.Content>
+                <Button.ContextMenu>
+                    <ContextMenu Name="buttonMenu" ItemsSource="{Binding Path=MenuItemsSource, RelativeSource={RelativeSource TemplatedParent}}" />
+                </Button.ContextMenu>
+            </Button>
+        </ControlTemplate>
+    </UserControl.Template>
 </UserControl>
