--- a/VidCoder/Controls/TimeBox.xaml
+++ b/VidCoder/Controls/TimeBox.xaml
@@ -1,15 +1,21 @@
 ﻿<UserControl
-	x:Class="VidCoder.Controls.TimeBox"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-	mc:Ignorable="d" 
-	d:DesignHeight="22" d:DesignWidth="100">
-	<Grid>
-		<TextBox
-			Name="timeBox"
-			VerticalContentAlignment="Center" HorizontalContentAlignment="Center"
-			GotFocus="TimeBoxGotFocus" LostFocus="TimeBoxLostFocus" PreviewTextInput="TimeBoxPreviewTextInput" PreviewKeyDown="TimeBoxPreviewKeyDown" TextChanged="TimeBoxTextChanged" />
-	</Grid>
+    x:Class="VidCoder.Controls.TimeBox"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="22"
+    d:DesignWidth="100"
+    mc:Ignorable="d">
+    <Grid>
+        <TextBox
+            Name="timeBox"
+            HorizontalContentAlignment="Center"
+            VerticalContentAlignment="Center"
+            GotFocus="TimeBoxGotFocus"
+            LostFocus="TimeBoxLostFocus"
+            PreviewKeyDown="TimeBoxPreviewKeyDown"
+            PreviewTextInput="TimeBoxPreviewTextInput"
+            TextChanged="TimeBoxTextChanged" />
+    </Grid>
 </UserControl>
