--- a/VidCoder/View/ApplyUpdateConfirmation.xaml
+++ b/VidCoder/View/ApplyUpdateConfirmation.xaml
@@ -1,25 +1,63 @@
 ﻿<Window
-	x:Class="VidCoder.ApplyUpdateConfirmation"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-	xmlns:res="clr-namespace:VidCoder.Resources"
-	Style="{StaticResource NormalWindow}"
-	Title="{x:Static res:MiscRes.ApplyUpdateDialogTitle}" Height="174" Width="347" WindowStartupLocation="CenterOwner" ShowInTaskbar="False"
-	TextOptions.TextFormattingMode="Display">
-	<Grid>
-		<TextBlock
-			Margin="12,12,12,65" FontSize="14" Text="{x:Static res:MiscRes.ApplyUpdateDialogMessage}" TextWrapping="Wrap"  />
-		<TextBlock 
-			Margin="0,0,0,45" HorizontalAlignment="Center" VerticalAlignment="Bottom">
-			<Hyperlink Name="changelogLink" Click="changelogLink_Click"><TextBlock Text="{x:Static res:MiscRes.ViewFullChangelog}" /></Hyperlink>
-		</TextBlock>
-		<StackPanel
-			Orientation="Horizontal"
-			HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,12,12">
-			<Button Margin="0,0,0,0" Name="yesButton" HorizontalAlignment="Right" MinWidth="75" Height="23" VerticalAlignment="Bottom" IsDefault="True" Click="yesButton_Click" Content="{x:Static res:CommonRes.Yes}"/>
-			<Button Margin="6,0,0,0" Name="noButton" Height="23" VerticalAlignment="Bottom" HorizontalAlignment="Right" MinWidth="75" IsCancel="True" Content="{x:Static res:CommonRes.No}" />
-			<Button Height="23" HorizontalAlignment="Right" Margin="20,0,0,0" Name="disableUpdatesButton" VerticalAlignment="Bottom" MinWidth="93" Click="disableUpdatesButton_Click" Content="{x:Static res:MiscRes.DisableUpdatesButton}" />
-		</StackPanel>
+    x:Class="VidCoder.ApplyUpdateConfirmation"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:res="clr-namespace:VidCoder.Resources"
+    Title="{x:Static res:MiscRes.ApplyUpdateDialogTitle}"
+    Width="347"
+    Height="174"
+    ShowInTaskbar="False"
+    Style="{StaticResource NormalWindow}"
+    TextOptions.TextFormattingMode="Display"
+    WindowStartupLocation="CenterOwner">
+    <Grid>
+        <TextBlock
+            Margin="12 12 12 65"
+            FontSize="14"
+            Text="{x:Static res:MiscRes.ApplyUpdateDialogMessage}"
+            TextWrapping="Wrap" />
+        <TextBlock
+            Margin="0 0 0 45"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Bottom">
+            <Hyperlink Name="changelogLink" Click="changelogLink_Click">
+                <TextBlock Text="{x:Static res:MiscRes.ViewFullChangelog}" />
+            </Hyperlink>
+        </TextBlock>
+        <StackPanel
+            Margin="0 0 12 12"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Bottom"
+            Orientation="Horizontal">
+            <Button
+                Name="yesButton"
+                Height="23"
+                MinWidth="75"
+                Margin="0 0 0 0"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Bottom"
+                Click="yesButton_Click"
+                Content="{x:Static res:CommonRes.Yes}"
+                IsDefault="True" />
+            <Button
+                Name="noButton"
+                Height="23"
+                MinWidth="75"
+                Margin="6 0 0 0"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Bottom"
+                Content="{x:Static res:CommonRes.No}"
+                IsCancel="True" />
+            <Button
+                Name="disableUpdatesButton"
+                Height="23"
+                MinWidth="93"
+                Margin="20 0 0 0"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Bottom"
+                Click="disableUpdatesButton_Click"
+                Content="{x:Static res:MiscRes.DisableUpdatesButton}" />
+        </StackPanel>
 
-	</Grid>
+    </Grid>
 </Window>
