--- a/VidCoder/View/LogWindow.xaml
+++ b/VidCoder/View/LogWindow.xaml
@@ -1,59 +1,59 @@
 ﻿<Window
-	x:Class="VidCoder.View.LogWindow"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:res="clr-namespace:VidCoder.Resources"
-	xmlns:vidCoder="clr-namespace:VidCoder"
-	Title="{x:Static res:LogRes.LogWindowTitle}"
-	Width="459"
-	Height="393"
-	MinWidth="220"
-	MinHeight="95"
-	Closing="Window_Closing"
-	ShowInTaskbar="False"
-	Style="{StaticResource NormalWindow}"
-	TextOptions.TextFormattingMode="Display"
-	WindowStyle="ToolWindow">
-	<Grid>
-		<RichTextBox
-			Name="logTextBox"
-			Margin="0,0,0,36"
-			IsReadOnly="True"
-			VerticalScrollBarVisibility="Auto">
-			<FlowDocument Name="logDocument">
-				<FlowDocument.Resources>
-					<!--  Eliminate blank line between paragraphs  -->
-					<Style TargetType="{x:Type Paragraph}">
-						<Setter Property="Margin" Value="0" />
-					</Style>
-				</FlowDocument.Resources>
-				<Paragraph Name="logParagraph" />
-			</FlowDocument>
-		</RichTextBox>
-		<Button
-			Name="copyButton"
-			Height="24"
-			MinWidth="68"
-			Margin="0,0,127,7"
-			HorizontalAlignment="Right"
-			VerticalAlignment="Bottom"
-			Command="{Binding CopyCommand}">
-			<StackPanel Margin="5,0" Orientation="Horizontal">
-				<Image
-					Width="16"
-					Height="16"
-					Source="/Icons/copy.png" />
-				<TextBlock Margin="4,0,0,0" Text="{x:Static res:CommonRes.Copy}" />
-			</StackPanel>
-		</Button>
+    x:Class="VidCoder.View.LogWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:res="clr-namespace:VidCoder.Resources"
+    xmlns:vidCoder="clr-namespace:VidCoder"
+    Title="{x:Static res:LogRes.LogWindowTitle}"
+    Width="459"
+    Height="393"
+    MinWidth="220"
+    MinHeight="95"
+    Closing="Window_Closing"
+    ShowInTaskbar="False"
+    Style="{StaticResource NormalWindow}"
+    TextOptions.TextFormattingMode="Display"
+    WindowStyle="ToolWindow">
+    <Grid>
+        <RichTextBox
+            Name="logTextBox"
+            Margin="0 0 0 36"
+            IsReadOnly="True"
+            VerticalScrollBarVisibility="Auto">
+            <FlowDocument Name="logDocument">
+                <FlowDocument.Resources>
+                    <!--  Eliminate blank line between paragraphs  -->
+                    <Style TargetType="{x:Type Paragraph}">
+                        <Setter Property="Margin" Value="0" />
+                    </Style>
+                </FlowDocument.Resources>
+                <Paragraph Name="logParagraph" />
+            </FlowDocument>
+        </RichTextBox>
+        <Button
+            Name="copyButton"
+            Height="24"
+            MinWidth="68"
+            Margin="0 0 127 7"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Bottom"
+            Command="{Binding CopyCommand}">
+            <StackPanel Margin="5 0" Orientation="Horizontal">
+                <Image
+                    Width="16"
+                    Height="16"
+                    Source="/Icons/copy.png" />
+                <TextBlock Margin="4 0 0 0" Text="{x:Static res:CommonRes.Copy}" />
+            </StackPanel>
+        </Button>
 
-		<Button
-			Height="23"
-			MinWidth="75"
-			Margin="0,0,12,7"
-			HorizontalAlignment="Right"
-			VerticalAlignment="Bottom"
-			Command="{Binding ClearLogCommand}"
-			Content="{x:Static res:LogRes.ClearButton}" />
-	</Grid>
+        <Button
+            Height="23"
+            MinWidth="75"
+            Margin="0 0 12 7"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Bottom"
+            Command="{Binding ClearLogCommand}"
+            Content="{x:Static res:LogRes.ClearButton}" />
+    </Grid>
 </Window>
