--- a/VidCoder/View/Panels/AudioEncodingPanel.xaml
+++ b/VidCoder/View/Panels/AudioEncodingPanel.xaml
@@ -14,12 +14,12 @@
     <UserControl.Resources>
         <converters:SampleRateDisplayConverter x:Key="SampleRateDisplayConverter" />
         <Style x:Key="AudioLabel" TargetType="TextBlock">
-            <Setter Property="Margin" Value="7,2,2,2" />
+            <Setter Property="Margin" Value="7 2 2 2" />
             <Setter Property="HorizontalAlignment" Value="Right" />
             <Setter Property="VerticalAlignment" Value="Center" />
         </Style>
         <Style x:Key="AudioLabelLeft" TargetType="FrameworkElement">
-            <Setter Property="Margin" Value="7,2,4,2" />
+            <Setter Property="Margin" Value="7 2 4 2" />
             <Setter Property="HorizontalAlignment" Value="Left" />
             <Setter Property="VerticalAlignment" Value="Center" />
         </Style>
@@ -30,7 +30,7 @@
     </UserControl.Resources>
     <Grid d:DataContext="{d:DesignInstance viewModel:AudioEncodingViewModel}">
         <Border
-            Margin="0,0,0,4"
+            Margin="0 0 0 4"
             BorderBrush="LightGray"
             BorderThickness="1"
             CornerRadius="4"
@@ -51,7 +51,7 @@
                 <!--  Column 0, Target stream  -->
                 <StackPanel
                     Grid.Column="0"
-                    Margin="0,0,4,0"
+                    Margin="0 0 4 0"
                     VerticalAlignment="Center"
                     Orientation="Vertical">
                     <TextBlock Text="{x:Static res:EncodingRes.TargetStream}" />
@@ -64,10 +64,10 @@
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock VerticalAlignment="Center" Text="{Binding Text}" />
                                     <Border
-                                        Margin="10,1,1,1"
+                                        Margin="10 1 1 1"
                                         Background="{StaticResource InputBrush}"
                                         CornerRadius="3"
-                                        Padding="3,1,3,1"
+                                        Padding="3 1 3 1"
                                         Visibility="{Binding HasTrackDetails,
                                                              Converter={StaticResource VisibilityConverter}}">
                                         <TextBlock
@@ -183,7 +183,7 @@
                 <!--  Column 2: Bitrate, compression, modifiers, auto-passthrough fallback, passthrough if possible  -->
                 <StackPanel
                     Grid.Column="2"
-                    Margin="4,0,0,0"
+                    Margin="4 0 0 0"
                     Orientation="Vertical">
                     <Grid>
                         <Grid.RowDefinitions>
@@ -200,7 +200,7 @@
                         <Button
                             Grid.Row="0"
                             Grid.Column="1"
-                            Margin="0,0,0,0"
+                            Margin="0 0 0 0"
                             HorizontalAlignment="Right"
                             VerticalAlignment="Top"
                             Command="{Binding RemoveAudioEncodingCommand}"
@@ -245,7 +245,7 @@
                         <StackPanel
                             Grid.Row="0"
                             Grid.Column="0"
-                            Margin="0,0,0,4"
+                            Margin="0 0 0 4"
                             Orientation="Horizontal"
                             Visibility="{Binding AutoPassthroughSettingsVisible,
                                                  Converter={StaticResource VisibilityConverter}}">
@@ -306,7 +306,7 @@
                             Grid.Row="1"
                             Grid.Column="1"
                             Height="23"
-                            Margin="60,0,0,0"
+                            Margin="60 0 0 0"
                             VerticalAlignment="Center"
                             IsSnapToTickEnabled="True"
                             Maximum="{Binding AudioQualityMaximum}"
@@ -413,7 +413,7 @@
 
                             <!--  DRC  -->
                             <TextBlock
-                                Margin="10,0,2,0"
+                                Margin="10 0 2 0"
                                 Foreground="{Binding DrcBrush}"
                                 Style="{StaticResource AudioLabel}"
                                 Text="{x:Static res:EncodingRes.DrcLabel}"
@@ -427,7 +427,7 @@
                             <controls:NumberBox
                                 Width="42"
                                 Height="22"
-                                Margin="0,2,0,2"
+                                Margin="0 2 0 2"
                                 VerticalAlignment="Center"
                                 AllowEmpty="False"
                                 BoxForeground="{Binding DrcBrush}"
