--- a/VidCoder/View/Panels/PicturePanel.xaml
+++ b/VidCoder/View/Panels/PicturePanel.xaml
@@ -28,13 +28,13 @@
         <Grid Grid.Row="0">
             <TextBlock
                 Height="21"
-                Margin="6,2,0,0"
+                Margin="6 2 0 0"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
                 Style="{StaticResource SectionHeader}"
                 Text="{x:Static res:EncodingRes.SizingLabel}" />
 
-            <StackPanel Margin="20,22,0,0" Orientation="Vertical">
+            <StackPanel Margin="20 22 0 0" Orientation="Vertical">
                 <!--  Width/Height  -->
                 <Grid
                     HorizontalAlignment="Left"
@@ -97,7 +97,7 @@
                         Grid.Row="0"
                         Grid.Column="2"
                         Height="26"
-                        Margin="4,0,0,0"
+                        Margin="4 0 0 0"
                         HorizontalAlignment="Right"
                         VerticalAlignment="Top"
                         Content="{x:Static res:EncodingRes.MaxWidthLabel}" />
@@ -118,7 +118,7 @@
                         Grid.Row="1"
                         Grid.Column="2"
                         Height="28.04"
-                        Margin="4,0,0,0"
+                        Margin="4 0 0 0"
                         HorizontalAlignment="Right"
                         VerticalAlignment="Top"
                         Content="{x:Static res:EncodingRes.MaxHeightLabel}" />
@@ -140,7 +140,7 @@
                 <!--  Keep aspect ratio  -->
                 <CheckBox
                     Height="17"
-                    Margin="20,6,0,0"
+                    Margin="20 6 0 0"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Top"
                     Content="{x:Static res:EncodingRes.KeepAspectRatioCheckBox}"
@@ -149,7 +149,7 @@
 
                 <Grid
                     Width="234"
-                    Margin="0,6,0,0"
+                    Margin="0 6 0 0"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Top">
                     <Grid.RowDefinitions>
@@ -173,7 +173,7 @@
                         Grid.Column="1"
                         Height="22"
                         MinWidth="65"
-                        Margin="0,1,0,0"
+                        Margin="0 1 0 0"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Top"
                         ItemsSource="{Binding DisplayNames,
@@ -195,7 +195,7 @@
                         Grid.Column="1"
                         Height="22"
                         MinWidth="65"
-                        Margin="0,1,0,0"
+                        Margin="0 1 0 0"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Top"
                         SelectedValue="{Binding Modulus}"
@@ -211,7 +211,7 @@
 
                 <!--  Custom Anamorphic fields  -->
                 <Grid
-                    Margin="20,6,0,0"
+                    Margin="20 6 0 0"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Top"
                     Visibility="{Binding CustomAnamorphicFieldsVisible,
@@ -229,7 +229,7 @@
                         Grid.Row="0"
                         Grid.Column="0"
                         Height="16"
-                        Margin="0,0,5,0"
+                        Margin="0 0 5 0"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Center"
                         Content="{x:Static res:EncodingRes.DisplayWidthRadioButton}"
@@ -254,7 +254,7 @@
                     <RadioButton
                         Grid.Row="1"
                         Grid.Column="0"
-                        Margin="0,0,5,0"
+                        Margin="0 0 5 0"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Center"
                         Content="{x:Static res:EncodingRes.PixelAspectRatioLabel}"
@@ -283,7 +283,7 @@
                     <TextBlock
                         Grid.Row="1"
                         Grid.Column="1"
-                        Margin="50,0,0,0"
+                        Margin="50 0 0 0"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Center"
                         Text="/"
@@ -294,7 +294,7 @@
                         Grid.Column="1"
                         Width="45"
                         Height="23"
-                        Margin="60,0,0,0"
+                        Margin="60 0 0 0"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Top"
                         AllowEmpty="False"
@@ -309,7 +309,7 @@
                 </Grid>
 
                 <StackPanel
-                    Margin="4,10,0,0"
+                    Margin="4 10 0 0"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Top"
                     Orientation="Horizontal">
@@ -323,7 +323,7 @@
                     </TextBlock>
                     <ComboBox
                         MinWidth="90"
-                        Margin="6,0,0,0"
+                        Margin="6 0 0 0"
                         ItemsSource="{Binding ScaleChoices}"
                         SelectedValue="{Binding ScaleMethod}"
                         SelectedValuePath="Value"
@@ -345,7 +345,7 @@
             <Grid Visibility="{Binding HasSourceData, Converter={StaticResource VisibilityConverter}}">
                 <Border
                     MinWidth="230"
-                    Margin="3,10,0,0"
+                    Margin="3 10 0 0"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Top"
                     Background="{StaticResource InputBrush}"
@@ -358,7 +358,7 @@
                         </Grid.ColumnDefinitions>
                         <TextBlock
                             Height="21"
-                            Margin="2,0,10,0"
+                            Margin="2 0 10 0"
                             HorizontalAlignment="Left"
                             VerticalAlignment="Top"
                             Style="{StaticResource SectionHeader}"
@@ -409,7 +409,7 @@
                 <Border
                     Height="56"
                     MinWidth="230"
-                    Margin="15,10,0,0"
+                    Margin="15 10 0 0"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Top"
                     Background="{StaticResource OutputBrush}"
@@ -422,7 +422,7 @@
                         </Grid.ColumnDefinitions>
                         <TextBlock
                             Height="21"
-                            Margin="2,0,10,0"
+                            Margin="2 0 10 0"
                             HorizontalAlignment="Left"
                             VerticalAlignment="Top"
                             Style="{StaticResource SectionHeader}"
@@ -474,7 +474,7 @@
             Grid.Row="0"
             Grid.Column="1"
             Height="21"
-            Margin="50,7,0,0"
+            Margin="50 7 0 0"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
             Style="{StaticResource SectionHeader}"
@@ -483,7 +483,7 @@
         <RadioButton
             Grid.Row="0"
             Grid.Column="1"
-            Margin="50,34,0,0"
+            Margin="50 34 0 0"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
             Content="{x:Static res:CommonRes.Automatic}"
@@ -494,7 +494,7 @@
         <RadioButton
             Grid.Row="0"
             Grid.Column="1"
-            Margin="50,56,0,0"
+            Margin="50 56 0 0"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
             Content="{x:Static res:CommonRes.None}"
@@ -505,7 +505,7 @@
         <RadioButton
             Grid.Row="0"
             Grid.Column="1"
-            Margin="50,78,0,0"
+            Margin="50 78 0 0"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
             Content="{x:Static res:CommonRes.Custom}"
@@ -517,13 +517,13 @@
             Grid.Row="0"
             Grid.Column="1"
             Width="235"
-            Margin="25,92,0,0"
+            Margin="25 92 0 0"
             HorizontalAlignment="Left"
             VerticalAlignment="Top">
             <controls:NumberBox
                 Width="45"
                 Height="23"
-                Margin="0,28,0,0"
+                Margin="0 28 0 0"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Top"
                 AllowEmpty="False"
@@ -535,7 +535,7 @@
             <controls:NumberBox
                 Width="45"
                 Height="22.96"
-                Margin="131,56,0,0"
+                Margin="131 56 0 0"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
                 AllowEmpty="False"
@@ -547,7 +547,7 @@
             <controls:NumberBox
                 Width="45"
                 Height="23"
-                Margin="57,56,0,0"
+                Margin="57 56 0 0"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
                 AllowEmpty="False"
@@ -559,7 +559,7 @@
             <controls:NumberBox
                 Width="45"
                 Height="23"
-                Margin="0,82,0,0"
+                Margin="0 82 0 0"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Top"
                 AllowEmpty="False"
@@ -569,24 +569,24 @@
                 Number="{Binding CropBottom,
                                  Mode=TwoWay}" />
             <TextBlock
-                Margin="0,9,0,0"
+                Margin="0 9 0 0"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Top"
                 Text="{x:Static res:EncodingRes.Top}" />
             <TextBlock
                 Width="52"
-                Margin="0,58,0,0"
+                Margin="0 58 0 0"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
                 Text="{x:Static res:EncodingRes.Left}"
                 TextAlignment="Right" />
             <TextBlock
-                Margin="0,106,0,0"
+                Margin="0 106 0 0"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Top"
                 Text="{x:Static res:EncodingRes.Bottom}" />
             <TextBlock
-                Margin="181,58,0,0"
+                Margin="181 58 0 0"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
                 Text="{x:Static res:EncodingRes.Right}" />
