--- a/VidCoder/View/ScanMultipleDialog.xaml
+++ b/VidCoder/View/ScanMultipleDialog.xaml
@@ -1,12 +1,24 @@
 ﻿<Window
-	x:Class="VidCoder.View.ScanMultipleDialog"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:res="clr-namespace:VidCoder.Resources"
-	Title="{x:Static res:MiscRes.ScanMultipleWindowTitle}" Height="90" Width="426" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" WindowStyle="ToolWindow" ShowInTaskbar="False" Closing="Window_Closing"
-	TextOptions.TextFormattingMode="Display">
-	<Grid>
-		<ProgressBar
-			Height="23" Margin="12,12,12,0" Name="progressBar1" VerticalAlignment="Top"
-			Value="{Binding Progress, Mode=OneWay}"/>
-	</Grid>
+    x:Class="VidCoder.View.ScanMultipleDialog"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:res="clr-namespace:VidCoder.Resources"
+    Title="{x:Static res:MiscRes.ScanMultipleWindowTitle}"
+    Width="426"
+    Height="90"
+    Closing="Window_Closing"
+    ResizeMode="NoResize"
+    ShowInTaskbar="False"
+    TextOptions.TextFormattingMode="Display"
+    WindowStartupLocation="CenterOwner"
+    WindowStyle="ToolWindow">
+    <Grid>
+        <ProgressBar
+            Name="progressBar1"
+            Height="23"
+            Margin="12 12 12 0"
+            VerticalAlignment="Top"
+            Value="{Binding Progress,
+                            Mode=OneWay}" />
+    </Grid>
 </Window>
